# wasmiot-supervisor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
host_app/: __init__.py  __main__.py
host_app/flask_app/: app.py
host_app/utils/: __init__.py  call.py  configuration.py  deployment.py  endpoint.py  mount.py  routes.py
host_app/wasm_utils/: general_utils.py  wasm.py  wasm3.py  wasm3_api.py  wasm_api.py  wasm_utils.py  wasmtime.py  wasmtime_backend.py
tempconfigs/: wasmiot-device-description.json
